2008-11-03  Mike Krüger  <mike@icsharpcode.net>

	* MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs: added some
	basic unit tests.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectTests.cs: Add unit test for bug #400420.

2008-10-31  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added unit test
	for 'Bug 439963 - Lacking members in code completion'.

2008-10-30  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Projects/ProjectTests.cs: Added some bug tests.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added more cases
	from 'Bug 432434 - Code completion doesn't work with subclasses'.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: Added test for
	'Bug 436705 - code completion for constructors does not handle class
	name collisions properly'.

2008-10-30  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs: added test for
	'Bug 432434 - Code completion doesn't work with subclasses'.

2008-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionBugTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharpTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionCSharp3Tests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionOperatorTests.cs:
	* MonoDevelop.CSharpBinding/CodeCompletionAccessibleTests.cs: Added some
	unit tests.

2008-10-29  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/CodeCompletionTests.cs: added  unit test for
	"Bug 439601 - Intellisense Broken For Partial Classes".

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.CSharpBinding/ParameterCompletionTests.cs: fixed a bug in
	unit tests.

2008-10-27  Mike Krüger  <mkrueger@novell.com>
